--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,26 +1,70 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Source+Sans+Pro:300|Zilla+Slab");
-body, html {
-  height: 100%;
+.navbar {
+  position: fixed;
   width: 100%;
-  background-image: linear-gradient(to bottom right, #0d2e75 0%, #297362 100%); }
-
-h1 {
+  top: 0;
+  display: flex;
+  background-color: #012452;
   font-family: 'Roboto';
-  letter-spacing: 1px;
-  color: rgba(248, 248, 248, 0.62);
-  text-align: center;
-  padding: 16px;
-  background-color: rgba(120, 174, 245, 0.16);
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.28); }
+  color: white;
+  align-items: center;
+  box-shadow: 1px 1px 3px black;
+  z-index: 4; }
+  .navbar button {
+    width: 64px;
+    height: 64px;
+    background-color: transparent;
+    border: none;
+    color: white; }
+    .navbar button i {
+      font-size: 25px; }
+  .navbar h1 {
+    flex: 3;
+    letter-spacing: 1px;
+    font-weight: 300;
+    margin: 8px;
+    padding: 0; }
+  .navbar p {
+    flex: 1; }
+
+.sidenav {
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  width: 15rem;
+  background-color: #012452;
+  z-index: 5;
+  -webkit-transform: translateX(-15rem);
+  -ms-transform: translateX(-15rem);
+  transform: translateX(-15rem);
+  -webkit-transition: all 0.5s ease-in-out;
+  -o-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  box-shadow: 2px 2px 5px black; }
+  .sidenav .close {
+    border: none;
+    background: none;
+    color: white;
+    padding: 16px; }
+
+body, html {
+  background: #010E1D;
+  margin: 0; }
+
+.subtitle {
+  padding-top: 62px;
+  color: white;
+  font: 38px 'Source Sans Pro';
+  margin: 21px; }
 
 .main {
   display: flex;
   flex-direction: row;
-  flex-wrap: wrap;
-  padding: 2rem; }
+  flex-wrap: wrap; }
 
 .card {
   flex: 0 1 20%;
+  min-width: 200px;
   display: block;
   background: rgba(7, 61, 90, 0.77);
   border: none;
@@ -28,39 +72,40 @@ h1 {
   box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
   border-radius: 4px;
   margin: 16px;
-  overflow: hidden; }
+  overflow: hidden;
+  transition: all 0.4s ease-in-out; }
   .card img {
     width: 100%;
     height: 100%;
     opacity: 0.5;
     border-radius: 4px;
     transition: all 0.5s ease-in-out; }
+  .card .card-text {
+    display: flex;
+    flex-direction: column;
+    color: white;
+    padding: 8px;
+    position: relative;
+    bottom: 3rem;
+    height: 3rem;
+    text-align: center;
+    background-color: rgba(7, 51, 70, 0.66);
+    font-family: 'Source Sans Pro';
+    transition: all 0.5s ease-in-out; }
+    .card .card-text .card-p {
+      height: 100%;
+      margin: 0; }
 
-.card-text {
-  display: flex;
-  flex-direction: column;
-  color: white;
-  padding: 8px;
-  position: relative;
-  bottom: 3rem;
-  height: 3rem;
-  text-align: center;
-  background-color: rgba(7, 51, 70, 0.66);
-  font-family: 'Source Sans Pro';
-  transition: all 0.5s ease-in-out; }
-
-.card:hover .card-text {
-  height: 16rem;
-  bottom: 16rem; }
-
-.card:hover img {
-  opacity: 0.1; }
-
-.card:hover .subelem {
-  opacity: 1; }
-
-.card-p {
-  height: 100%; }
+.card:hover {
+  transform: translateY(-20px); }
+  .card:hover .card-text {
+    height: 16rem;
+    bottom: 16rem; }
+  .card:hover img {
+    opacity: 0.1;
+    transform: rotateY(360deg); }
+  .card:hover .subelem {
+    opacity: 1; }
 
 .header {
   font-size: 20px;
