--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,30 +1,30 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Source+Sans+Pro:300|Zilla+Slab');
 
+@import 'navbar';
+@import 'sidebar';
+@import 'theme';
+
 body, html{
-  height: 100%;
-  width: 100%;
-  background-image: linear-gradient(to bottom right, rgb(13, 46, 117) 0%, #297362 100%);
+  background: $background;
+  margin: 0;
 }
 
-h1 {
-  font-family: 'Roboto';
-  letter-spacing: 1px;
-  color: rgba(248, 248, 248, 0.62);
-  text-align: center;
-  padding: 16px;
-  background-color: rgba(120, 174, 245, 0.16);
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.28);
+.subtitle {
+  padding-top: 62px;
+  color: white;
+  font: 38px 'Source Sans Pro';
+  margin: 21px ;
 }
 
 .main {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  padding: 2rem;
 }
 
 .card {
   flex: 0 1 20%;
+  min-width: 200px;
   display: block;
   background: rgba(7, 61, 90, 0.77);
   border: none;
@@ -33,6 +33,7 @@ h1 {
   border-radius: 4px;
   margin: 16px;
   overflow: hidden;
+  transition: all 0.4s ease-in-out;
 
   img {
     width: 100%;
@@ -42,30 +43,38 @@ h1 {
     transition: all 0.5s ease-in-out;
   }
 
-}
+  .card-text{
+    display: flex;
+    flex-direction: column;
+    color: white;
+    padding: 8px;
+    position: relative;
+    bottom: 3rem;
+    height: 3rem;  
+    text-align: center;
+    background-color: rgba(7, 51, 70, 0.66);
+    font-family: 'Source Sans Pro';
+    transition: all 0.5s ease-in-out; 
 
-.card-text{
-  display: flex;
-  flex-direction: column;
-  color: white;
-  padding: 8px;
-  position: relative;
-  bottom: 3rem;
-  height: 3rem;  
-  text-align: center;
-  background-color: rgba(7, 51, 70, 0.66);
-  font-family: 'Source Sans Pro';
-  transition: all 0.5s ease-in-out; 
+    .card-p{
+      height: 100%;
+      margin: 0;
+    }
+  }
+
 }
 
 .card:hover {
   
+  transform: translateY(-20px);
+
   .card-text {
     height: 16rem;
     bottom: 16rem;
   }
   img {
     opacity: 0.1;
+    transform: rotateY(360deg);
   }
 
   .subelem {
@@ -73,9 +82,6 @@ h1 {
   }
 } 
 
-.card-p{
-  height: 100%;
-}
 
 .header {
   font-size: 20px;
