--- a/sass/_theme.scss
+++ b/sass/_theme.scss
@@ -1,6 +1,8 @@
 
 $primary: #012452;
-$primary-light: #053B81;
+$primary-light: rgb(11, 77, 163);
+$primary-lighter: rgba(202, 228, 255, 0.849);
 $primary-dark: #00070F;
 $primary-opacity: rgba(1, 36, 82, 0.86);
+$primary-background: rgba(8,32,52,0.5);
 $background: #010E1D;
