--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,8 +1,12 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Source+Sans+Pro:300|Zilla+Slab');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto:300,400|Source+Sans+Pro:300|Zilla+Slab|Lato');
 
 @import 'navbar';
 @import 'sidebar';
 @import 'theme';
+@import 'nuevoJuego';
+@import 'juegos';
+@import 'dashboard';
+
 
 body, html{
   background: $background;
@@ -10,71 +14,107 @@ body, html{
 }
 
 .subtitle {
-  padding-top: 62px;
-  color: white;
-  font: 38px 'Source Sans Pro';
-  margin: 21px ;
+  padding-top: 48px;
+  color: $primary-light;
+  font: 52px 'Source Sans Pro';
+  margin: 32px ;
+  margin-bottom: 0;
+  border-bottom: 1px solid $primary-light;
+
+  &-small{
+    @extend .subtitle;
+    font-size: 32px;
+    margin-bottom: 8px;
+  }
 }
 
 .main {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: start;
 }
 
 .card {
-  flex: 0 1 20%;
-  min-width: 200px;
+  flex: 1 1 29%;
+  min-width: 19rem;
+  max-width: 19rem;
   display: block;
   background: rgba(7, 61, 90, 0.77);
   border: none;
   height: 20rem;;
-  box-shadow: 1px 1px 4px rgba(0, 0, 0, 0.6);
   border-radius: 4px;
-  margin: 16px;
   overflow: hidden;
-  transition: all 0.4s ease-in-out;
+  transition: all 0.4s linear;
+  text-align: center;
 
   img {
     width: 100%;
     height: 100%;
-    opacity: 0.5;
+    opacity: 0.7;
     border-radius: 4px; 
-    transition: all 0.5s ease-in-out;
+    transition: all 0.5s linear;
+    object-fit: cover;
+    filter: grayscale(100%);
   }
 
   .card-text{
     display: flex;
     flex-direction: column;
     color: white;
-    padding: 8px;
+    padding: 12px;
     position: relative;
-    bottom: 3rem;
+    bottom: 3.4rem;
     height: 3rem;  
-    text-align: center;
-    background-color: rgba(7, 51, 70, 0.66);
+    text-align: left;
+    background-color: rgba(7, 51, 70, 0.5);
     font-family: 'Source Sans Pro';
-    transition: all 0.5s ease-in-out; 
+    transition: all 0.3s linear; 
+
+    p.subheader{
+      opacity: 0;
+      margin-bottom: 16px;
+    }
 
     .card-p{
-      height: 100%;
+      height: auto;
       margin: 0;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+
+      p{
+        margin: 0;
+        flex: 3;
+      }
+
+      p.valor {
+        flex: 1;
+        font-size: 24px;
+        font-weight: 700;
+        text-align: center;
+      }
     }
   }
 
 }
 
 .card:hover {
-  
-  transform: translateY(-20px);
+  -webkit-transform: translateY(-10px);
+  -ms-transform: translateY(-10px);
+      transform: rotateY(10);
 
   .card-text {
     height: 16rem;
     bottom: 16rem;
+    p.subheader{
+      opacity: 1;
+    }
   }
   img {
-    opacity: 0.1;
-    transform: rotateY(360deg);
+    opacity: 0.7;
+    -webkit-filter: grayscale(0);
+    filter: grayscale(0);
   }
 
   .subelem {
@@ -84,11 +124,14 @@ body, html{
 
 
 .header {
+  height: 2rem;
   font-size: 20px;
   letter-spacing: 3px;
+  padding-bottom: 0;
 }
+
 
 .subelem {
   opacity: 0;
-  transition: all 0.5s ease-in-out;
+  transition: all 0.4s ease-in;
 }
