--- a/app/templates/includes/sidebar.html
+++ b/app/templates/includes/sidebar.html
@@ -3,4 +3,5 @@
     <a href="{{url_for('getDashboard')}}"><i class="fa fa-pie-chart" aria-hidden="true"></i>Dashboard</a>
     <a href="{{url_for('getJuegos')}}"><i class="fa fa-trophy" aria-hidden="true"></i>Juegos</a>
     <a href="{{url_for('getJugadores')}}"><i class="fa fa-users" aria-hidden="true"></i>Jugadores</a>
+    <a href="{{url_for('getJugadores')}}" class="acerca"><i class="fa fa-info-circle" aria-hidden="true"></i>Acerca</a>
 </div>
