--- a/app/templates/includes/navbar.html
+++ b/app/templates/includes/navbar.html
@@ -1,7 +1,6 @@
 <div class="navbar">
     <button class="btn-menu" onclick="showSideNav()"><i class="fa fa-bars fa-2x" aria-hidden="true"></i></button>
-    <h1>BNT> La podrida </h1>
-    <h2 class="fn">Feliz Navidad?</h2>
+    <h2>BNT> La <span>Podrida</span> </h2>
     <p>&#9824</p>
     <p>&#9827</p>
     <p>&#9829</p>
