Agrego a Migue, para cargar 2 lapos nuevas.

--- a/sass/_sidebar.scss
+++ b/sass/_sidebar.scss
@@ -16,7 +16,7 @@
     -webkit-transition: all 0.3s ease-in-out;
         -o-transition: all 0.3s ease-in-out;
             transition: all 0.3s ease-in-out;
-    box-shadow: 2px 2px 5px black;
+    box-shadow: 2px 2px 5px #90ee90;
 
     .close {
         border: none;
